0.9-17
- data(topoWorld) now has longitude from -179.5 to 180
- ODF2oce() added
- read.odf() handles more data types
- read.adp.rdi() reads more VmDas (navigational) data
- ITS-90 is now the default temperature unit
- ctd objects can have vector longitude and latitude
- logger class renamed to rsk
- bremen class added
- coastlineCut() added
- rgdal package used instead of local PROJ.4 source code
- mapproj-style map projections eliminated

0.9-16
- cite PROJ.4 contributors in DESCRIPTION
- address package-build warnings; improve DESCRIPTION (thanks, BR)

0.9-15
- plot.echosounder() gets new argument 'drawPalette'
- data(landsat) taken from ocedata (and shrunk)
- data(nao) and data(soi) moved to ocedata
- mapTissot() added
- read.logger() with ctd-type data infers salinity if necessary
- ctdTrim() can have "method" as a function
- as.topo() can convert "bathy" objects from the marmap package
- "+.section" renamed sectionAddStation()
- oceApprox() renamed oce.approx(), with an alias for compatibility 
- oce.grid() added
- "tdr" class renamed "logger"
- swCSTp() added
- swConductivity() now swThermalConductivity(); using Caldwell (1974).
- many sw*() functions handle eos="gsw"
- libary(gsw) replaces teos()
- curl() added
- handle new NOAA ascii topography dataset type
- mapGrid() added
- data(soi) moved to ocedata package
- lonlat2map() added
- map2lonlat() made more accurate
- permit proj4 style map projections
- landsat-7 (and possibly 4 and 5) support
- landsat decimation/plotting improvements
- drifterGrid() added
- mapDirectionField() added
- mapArrows() added
- read.index() added
- utm2lonlat() and lonlat2utm() added
- data(met) changed to time of Hurricane Juan

0.9-14
- fix compile-time warning
- colormap() added, and functionality added to imagep() and drawPalette()
- imagep() and drawPalette() new arg. 'axisPalette' (suggested C. Richards)
- drawPalette() has new args: plot, pos, levels, and cex.axis
- ctdDecimate() permits user-supplied method function